name:                   pandoc-tikz
version:                0.1.0.0
synopsis:               A script to embed TikZ pictures in Markdown documents
homepage:               https://bitbucket.org/claudio/pandoc-tikz/
license:                MIT
license-file:           LICENSE
author:                 Claudio Mattera
maintainer:             claudio@mattera.it
copyright:              Claudio Mattera 2014-2015
category:               Text
build-type:             Simple
cabal-version:          >=1.10


library
  exposed-modules:    Text.Pandoc.TikZ
                    , Text.Pandoc.TikZ.Hash
                    , Text.Pandoc.TikZ.GhostScript
  hs-source-dirs:     src
  default-language:   Haskell2010
  build-depends:      base == 4.*
                    , pandoc
                    , pandoc-types
                    , bytestring
                    , base16-bytestring
                    , cryptohash
                    , process
                    , directory
                    , filepath
                    , transformers
                    , transformers-compat

                    , monad-control
                    , mtl
                    , lifted-base


executable pandoc-tikz
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  build-depends:      base == 4.*
                    , pandoc-tikz
                    , cmdargs
                    , directory
                    , filepath


Test-Suite Tests
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    build-depends:    base == 4.*
                    , tasty
                    , tasty-hunit
                    , pandoc-tikz


source-repository head
  type:               mercurial
  location:           https://bitbucket.org/claudio/pandoc-tikz/
